# secnet

./: .dir-locals.el  .gitignore  BUGS  CREDITS  DEVELOPER-CERTIFICATE  Dir.sd.mk  Final.sd.mk  INSTALL  LICENCE  Makefile.in  NEWS  NOTES  NOTES.peer-keys  OLD-BUGS  OLD-NEWS  Perdir.mk.in  Perdir.sd.mk  README  README.mac  README.make-secnet-sites  Subdir.mk.in  Subdir.sd.mk  Suffix.sd.mk  TODO  ac_prog_cc_no_writeable_strings.m4  acinclude.m4  aclocal.m4  aes.c  aes.h  argparseactionnoyes.py  autogen.sh  base91.c  base91.py  cdeps.sd.mk  clean.sd.mk  cli.c  comm-common.c  comm-common.h  common.make.in  comprehensive-test  (+100 more)
AWK/: README
DOS-asm/: b91enc.asm  readme.txt
Java/: basE91.java  manifest.mf
PHP4/: base91.php
base91-c/: Makefile  base91.h
base91-c/AWK/: b91dec.awk
base91-c/Java/: b91cli.java  build_jar.sh  readme.txt
base91-c/PHP4/: README
base91-c/test/: Makefile
base91s/: Dir.sd.mk  base91.c.patch
build-aux/: subdirmk-setup  subdirmk.in
debian/: .gitignore  NEWS  README.source  changelog  conffiles  control  copyright  default  dirs  files  init  lintian-overrides  postinst.debhelper  postrm.debhelper  prerm.debhelper  rules  secnet.docs  secnet.logrotate  substvars
example/: .gitignore  Dir.sd.mk  Final.sd.mk  Suffix.sd.mk  configure.ac
example/lib/: Dir.sd.mk  Subdir.sd.mk  toylib.c
example/lib/t/: Dir.sd.mk
example/src/: Dir.sd.mk  Subdir.sd.mk  toy.c
lib/: Makefile.in  Subdir.mk  Subdir.mk.in  Subdir.sd.mk  toylib.c  toylib.h
lib/t/: Makefile.in  Subdir.mk  Subdir.mk.in  Subdir.sd.mk  toytest.c
linux/: if_tun.h
mtest/: Dir.sd.mk  Ginside.sites  Goutside.sites  Makefile.in  Subdir.sd.mk  common.tcl  delegations.sites  e-basic.conf  e-filter.sites  e-userv.conf  e-userv.sites  header.sites  t-basic  t-filter  t-prefix  t-userv
src/: Subdir.mk  Subdir.mk.in  Subdir.sd.mk  toy.c
stest/: Dir.sd.mk  Makefile.in  Subdir.sd.mk  common.tcl  t-Cnonnego-on  t-Cnonnego-onr  t-basic-kex  t-dyni-kex  t-nonnego-on  t-nonnego-oo  udp-preload.c
subdirmk/: .gitignore  NOTES  README  autogen.sh  cdeps.mk.in  cdeps.sd.mk  clean.sd.mk  generate  regen.mk.in  subdirmk.ac  usual.mk.in
subdirmk/example/: .gitignore  LGPL-2  Perdir.sd.mk  Subdir.sd.mk  configure.ac
subdirmk/example/lib/: Subdir.sd.mk  toylib.c  toylib.h
subdirmk/example/lib/t/: Subdir.sd.mk  toytest.c
subdirmk/example/src/: Subdir.sd.mk
subdirmk/tests/: advance-tested  check  tests.mk
subdirmk/tests/example/: .gitignore  check
subdirmk/tests/filter/: Dir.mk.expected  Dir.sd.mk  Suffix.sd.mk  check  main.mk.expected  stderr.expected  update-expected
subdirmk/tests/filter/sub/: Dir.mk.expected
subdirmk/tests/filter/sub/dir/: Dir.mk.expected
subdirmk/tests/intree/: check
test/: Makefile  Makefile.in  common.tcl  invoke  t-basic-kex  t-dyni-kex  test.sh  udp-preload.c
test-example/: Dir.sd.mk  Makefile  Makefile.in  README  Subdir.sd.mk  bogus-setup-request.c  common.conf  fake-userv  inside-polypath.conf  inside.conf  inside.key.b64  inside.key.pub  memcheck.suppressions  null-fake-userv  outside-random.conf  outside-unshare.conf  outside.conf  outside.key.b64  outside.key.pub  random-fake-userv  rsa1-sites2.key.b64  rsa1-sites2.key.pub  sites
tests/: .gitignore  build-common  check  make-release  tests.mk
tests/example/: check
tests/filter/: .gitignore  Dir.mk.expected  Dir.sd.mk  Final.mk.expected  Final.sd.mk  Perdir.sd.mk  Prefix.sd.mk  Subdir.mk.expected  Subdir.sd.mk  Suffix.sd.mk  check  extract-doctest  extract-doctests  main.mk.expected  stderr.expected  update-expected
tests/filter/sub/: Subdir.mk.expected
tests/filter/sub/dir/: Dir.mk.expected  Dir.sd.mk  Subdir.mk.expected  Subdir.sd.mk
tests/intree/: check
