dnl Process this file with autoconf to produce a configure script.

sinclude(ac_prog_cc_no_writeable_strings.m4)

AC_INIT(secnet.c)
AC_CONFIG_HEADER(config.h)

AC_REVISION($Id: configure.in,v 1.3 2002/02/20 16:18:18 steve Exp $)

AC_LANG_C

AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(RM,rm)
AC_STDC_HEADERS
AC_CHECK_HEADERS(stdint.h inttypes.h)
AC_CHECK_HEADERS(net/if.h net/route.h)
AC_CHECK_HEADERS(linux/if.h)
AC_CHECK_HEADERS(stropts.h sys/sockio.h net/if_tun.h)
AC_C_BIGENDIAN
AC_CHECK_SIZEOF(unsigned long long)
AC_CHECK_SIZEOF(unsigned long)
AC_CHECK_SIZEOF(unsigned int)
AC_CHECK_SIZEOF(unsigned short)
AC_CHECK_SIZEOF(unsigned char)
AC_PROG_CC_NO_WRITEABLE_STRINGS(WRITESTRINGS)

dnl the order in which libraries is checked is important
dnl eg. adns on Solaris 2.5.1 depends on -lnsl and -lsocket
AC_CHECK_LIB(gmp,mpz_init_set_str)
AC_CHECK_LIB(gmp2,mpz_init_set_str)
AC_CHECK_LIB(gmp,__gmpz_init_set_str)
AC_CHECK_LIB(fl,yywrap)
AC_CHECK_LIB(nsl,inet_ntoa)
AC_CHECK_LIB(getopt,getopt_long)
AC_CHECK_LIB(gnugetopt,getopt_long)
AC_CHECK_LIB(socket,socket)
AC_CHECK_LIB(resolv,inet_aton)
AC_CHECK_LIB(adns,adns_init)

dnl check for getopt in standard library
AC_SUBST(LIBOBJS)
AC_CHECK_FUNCS(getopt_long , , [LIBOBJS="$LIBOBJS getopt.o getopt1.o"] ) 
dnl check for alloca
AC_CHECK_FUNCS(snprintf , , [LIBOBJS="$LIBOBJS snprintf.o"] )
AC_FUNC_ALLOCA()

AC_OUTPUT(Makefile,echo timestamp >stamp-h)
